<resources>
    <string name="lang">eng</string>
    <string name="app_name">SBW</string>
    <string name="rate">&#9825; Rate us</string>
    <string name="sources">View source code</string>
    <string name="twitter">Follow us on twitter</string>
    <string name="password">Wallet password</string>
    <string name="manual">Read manual</string>
    <string name="choose_wallet">Choose a wallet</string>
    <string name="hardware_wallet">Hardware wallet</string>
    <string name="watching_wallet">Watching wallet</string>
    <string name="coin_control">Coin control</string>
    <string name="bitcoin_wallet">Bitcoin</string>
    <string name="lightning_wallet">Lightning</string>
    <string name="total_balance">Total balance</string>
    <string name="hosted_channel">HOSTED CHANNEL\nCustodial solution</string>
    <string name="typing_hints">Bitcoin address, invoice, email&#8230;</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="add_address">More fresh addresses</string>
    <string name="delayed_pending">pending</string>
    <string name="search_recent">Search recent activity</string>
    <string name="emergency_mode">Something went wrong</string>
    <string name="error_log">Export error logs</string>
    <string name="setup_title">Wallet setup</string>
    <string name="setup_create_new">Create new wallet</string>
    <string name="setup_restore_existing">Restore existing wallet</string>
    <string name="setup_recovery_phrase">Recovery phrase only</string>
    <string name="setup_backup_file">Backup + recovery phrase</string>
    <string name="delayed_refunding">Delayed channel refunding</string>
    <string name="delayed_refunding_ext">Do not erase wallet data until all delayed refunds are cleared!</string>
    <string name="setup_create_new_hint">A completely fresh Bitcoin wallet with a new recovery phrase will be generated from scratch.</string>
     <string name="share_ln_payment">Signed invoice\n%1$s\n\nPayment hash\n%2$s\n\nPayment description\n%3$s\n\nReceiver Node ID\n%4$s\n\nProof of payment\n%5$s\n\nDebug info\n%6$s</string>
     <string name="share_chain_tx">Bitcoin transaction hex\n\n%1$s</string>
    <string name="setup_backup_file_hint">
        Provide a file containing Lightning backup, then provide a recovery
        phrase to fully restore Bitcoin wallet along with Lightning channels.
        Turn other copies of your wallet off before proceeding.
    </string>
    <string name="setup_recovery_phrase_hint">
        Provide a recovery phrase to restore Bitcoin wallet and hosted channels only.
        Lightning channel balances on previous devices will be refunded on manually
        connecting to remote nodes you had those channels with.
    </string>
    <string name="action_backup_present_title"><![CDATA[
        <b>Lightning backup file is present</b><br><br>Recovery phrase will be
        used to decrypt it and restore fully working channels on this device
    ]]></string>
    <string name="action_recovery_phrase_title">Wallet recovery phrase</string>
    <string name="action_recovery_phrase_hint">Type recovery words</string>
    <string name="title_chans">Lightning channels</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_receive">Receive</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_stamp">Stamp</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_split">Split</string>
    <string name="dialog_share">Share</string>
    <string name="dialog_break">Break</string>
    <string name="dialog_boost">Boost</string>
    <string name="dialog_open">Open</string>
    <string name="dialog_copy">Copy</string>
    <string name="dialog_scan">Scan</string>
    <string name="dialog_info">Info</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_max">Max</string>
    <string name="dialog_visibility_sender">visible to sender</string>
    <string name="dialog_visibility_receiver">visible to receiver</string>
    <string name="dialog_visibility_private">visible to you only</string>
    <string name="dialog_add_description">Add description&#8230;</string>
    <string name="dialog_add_comment">Add comment&#8230;</string>
    <string name="dialog_set_label">Attach label&#8230;</string>
    <string name="dialog_receive_btc"><![CDATA[Receive to <b>Bitcoin</b> address]]></string>
    <string name="dialog_receive_ln"><![CDATA[Receive to <b>Lightning</b> invoice]]></string>
    <string name="dialog_legacy_transfer_btc">Transfer funds to modern wallet</string>
    <string name="dialog_legacy_send_btc">Send transaction to address</string>
    <string name="scan_btc_address">Scan Bitcoin address</string>
    <string name="dialog_up_to"><![CDATA[<b>up to</b> %1$s]]></string>
    <string name="dialog_fee_sat_vbyte"><![CDATA[<b>fee</b> %1$s sat/vB]]></string>
    <string name="dialog_change_feerate">Change feerate&#8230;</string>
    <string name="dialog_insufficient_funds">missing funds</string>
    <string name="dialog_sat_vbyte">sat/vB</string>
    <string name="dialog_send_btc_from"><![CDATA[from&#160;<b>%1$s</b>&#160;wallet]]></string>
    <string name="dialog_send_btc"><![CDATA[Send <b>Bitcoin</b> transaction<br><b>to address</b> %1$s%2$s]]></string>
    <string name="dialog_send_btc_many"><![CDATA[Send <b>Bitcoin</b> transaction<br><b>to many addresses</b>]]></string>
    <string name="dialog_send_btc_confirm_amount">Send amount</string>
    <string name="dialog_send_btc_confirm_fiat">Fiat value</string>
    <string name="dialog_send_btc_confirm_fee">Chain fee</string>
    <string name="dialog_send_ln"><![CDATA[Send <b>Lightning</b> payment%1$s]]></string>
    <string name="dialog_split_ln"><![CDATA[Split <b>Lightning</b> payment%1$s]]></string>
    <string name="dialog_split_ln_tip">Let someone scan a split invoice,\nThen tap OK at about the same time</string>
    <string name="dialog_ln_expected_fee"><![CDATA[<b>expected fee</b> %1$s]]></string>
    <string name="dialog_ln_requested"><![CDATA[<b>requested</b>&#160;%1$s]]></string>
    <string name="dialog_ln_left"><![CDATA[<b>left to pay</b>&#160;%1$s]]></string>
    <string name="btc_transfer_label"><![CDATA[legacy -> modern wallet]]></string>
    <string name="btc_transfer_message"><![CDATA[Local transfer of Bitcoin from legacy to modern chain wallet]]></string>
    <string name="recovery_phrase_warning">Tap to save wallet recovery phrase in case you ever lose or replace your phone.</string>
    <string name="error_channel">Channel error happened</string>
    <string name="error_channel_remote"><![CDATA[<b>Error from remote peer</b>:<br><br>%1$s]]></string>
    <string name="error_channel_closed"><![CDATA[<b>Channel has been force-closed by wallet, fatal error details</b>:<br><br>%1$s]]></string>
    <string name="error_channel_suspended"><![CDATA[<b>Hosted channel has been suspended by wallet, fatal error details</b>:<br><br>%1$s]]></string>
    <string name="error_channel_unknown"><![CDATA[
        Remote peer indicates that there exists a Lightning channel which is somehow not present on your device.<br><br>
        Peer can be requested to break that channel which would get the rest of its balance back to your chain wallet.<br><br>
        <b>Missing Channel ID</b><br>%1$s<br><br>
        <b>Local node ID</b><br>%1$s<br><br>
        <b>Peer node ID</b><br>%2$s
    ]]></string>
    <string name="error_rejected_incoming_public">Rejected public channel offer, only private channels are allowed.</string>
    <string name="error_btc_no_wallet">Can not proceed because related chain wallet is not found, please add it from app settings.</string>
    <string name="error_btc_broadcast_fail">Could not broadcast a transaction, please make sure that wallet has network connection and then try again.</string>
    <string name="error_could_not_decrypt"><![CDATA[<b>Backup decryption failed</b>.<br><br>Make sure that both backup file and recovery phrase are correct and belong to the same wallet.<br><br>Error details<br><b>%1$s</b>]]></string>
    <string name="error_wrong_phrase"><![CDATA[<b>Provided phrase is incorrect</b>.<br><br>Error details<br><b>%1$s</b>]]></string>
    <string name="error_old_api_level">Requires API 24+, yours is %1$s</string>
    <string name="error_nothing_useful">Nothing useful is found</string>
    <string name="error_ln_no_chans"><![CDATA[Can neither send nor receive Lightning payments because no open channels are present.]]></string>
    <string name="error_ln_waiting"><![CDATA[Can neither send nor receive Lightning payments because none of your channels is open yet.<br><br>Please wait for more channel funding confirmations.]]></string>
    <string name="error_ln_receive_no_update"><![CDATA[Can\'t request Lightning payments because receiving parameters are not yet available, please wait for more channel funding confirmations.]]></string>
    <string name="error_ln_receive_reserve"><![CDATA[Can\'t request Lightning payments yet because first you need to spend at least <b>%1$s</b> to make some space for receiving.]]></string>
    <string name="error_ln_send_small"><![CDATA[Can\'t send this Lightning payment because requested amount of <b>%1$s</b> is too small, a minimal amount is <b>%2$s</b>.]]></string>
    <string name="error_ln_send_reserve"><![CDATA[Can\'t send Lightning payments yet because your payment channel is empty and you need to receive something into it first.]]></string>
    <string name="error_ln_send_no_secret"><![CDATA[Can\'t send this Lightning payment because invoice does not contain a secret.]]></string>
    <string name="error_ln_send_network"><![CDATA[Can\'t send this Lightning payment because it belongs to some unknown network.]]></string>
    <string name="error_ln_send_split"><![CDATA[Can\'t proceed with this split invoice because its split parameters are wrong.]]></string>
    <string name="error_ln_send_done_already"><![CDATA[Can\'t send this Lightning payment because it has already been sent.]]></string>
    <string name="error_ln_send_expired"><![CDATA[Can\'t send this Lightning payment because invoice has expired by now.]]></string>
    <string name="error_ln_send_in_flight"><![CDATA[Can\'t send this Lightning payment because it is already in-flight.]]></string>
    <string name="error_hc_dangerous_state">Dangerous payment state</string>
    <string name="error_hc_option_can_stamp"><![CDATA[You can put a <b>proof stamp</b> to Bitcoin blockchain right now to always be able to show that you are owed <b>%1$s</b>, this will cost <b>%2$s</b>.]]></string>
    <string name="error_hc_option_can_not_stamp"><![CDATA[Host obligation can be fixated forever by putting a <b>proof stamp</b> to Bitcoin blockchain but you need some chain funds to pull that off.]]></string>
    <string name="rpa_title">Remote peer connection</string>
    <string name="rpa_no_feature_support">Can not open channels with this node since some important features are not supported by remote peer.</string>
    <string name="rpa_request_channel">Share your node ID with remote peer and keep this page open to get an incoming channel.</string>
    <string name="rpa_request_hc">Request hosted channel</string>
    <string name="rpa_share_node_id">Share node ID</string>
    <string name="rpa_open_nc">Fund new channel</string>
    <string name="chan_capacity">Capacity</string>
    <string name="chan_can_send">Can send</string>
    <string name="chan_can_receive">Can receive</string>
    <string name="chan_in_flight">Value in-flight</string>
    <string name="chan_refundable">Refundable</string>
    <string name="ln_hc_override">Override proposal</string>
</resources>