<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    style="@style/StandardLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        style="@style/StandardLinearLayout"
        android:id="@+id/activitySetupMain">

        <TextView
            style="@style/XMarginFillingView"
            android:text="@string/setup_title"
            android:textSize="@dimen/header_size"/>

        <LinearLayout style="@style/StandardXYMarginLinearLayout">

            <com.ornach.nobobutton.NoboButton
                app:nb_text="@string/setup_create_new"
                android:onClick="createNewWallet"
                style="@style/GreenButton"/>

            <TextView
                android:layout_marginTop="@dimen/chip_default_padding_edge"
                android:text="@string/setup_create_new_hint"
                style="@style/BoundedView"/>

            <com.ornach.nobobutton.NoboButton
                app:nb_text="@string/setup_restore_existing"
                android:layout_marginTop="@dimen/large_button_margin"
                android:id="@+id/restoreOptionsButton"
                android:onClick="showMnemonicPopup"
                style="@style/GrayButton"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>