<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    style="@style/StandardLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:f="http://schemas.android.com/tools">

    <LinearLayout style="@style/StandardXYMarginLinearLayout">

        <!-- Remote peer info -->

        <TextView
            style="@style/FillingView"
            android:text="@string/rpa_title"
            android:textSize="@dimen/header_size"/>

        <TextView
            style="@style/BoundedView"
            android:id="@+id/peerNodeKey"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorAccent"/>

        <TextView
            style="@style/BoundedView"
            android:id="@+id/peerIpAddress"
            android:textColor="@color/colorAccent"/>

        <!-- Features and actions -->

        <org.apmem.tools.layouts.FlowLayout
            android:layout_marginBottom="5dp"
            android:layout_marginTop="25dp"
            android:id="@+id/featuresList"
            style="@style/BoundedView"
            android:visibility="gone"
            f:layout_newLine="true">

            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/ChannelRangeQueriesExtended"/>
            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/OptionDataLossProtect"/>
            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/BasicMultiPartPayment"/>
            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/PrivateRouting"/>
            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/StaticRemoteKey"/>
            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/HostedChannels"/>
            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/ChainSwap"/>
            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/Wumbo"/>
        </org.apmem.tools.layouts.FlowLayout>

        <TextView
            style="@style/BoundedView"
            android:layout_marginTop="25dp"
            android:text="@string/rpa_no_feature_support"
            android:id="@+id/viewNoFeatureSupport"
            android:visibility="gone"/>

        <!-- Actions -->

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/viewYesFeatureSupport"
            style="@style/StandardLinearLayout">

            <com.ornach.nobobutton.NoboButton
                app:nb_text="@string/rpa_open_nc"
                android:onClick="fundNewChannel"
                android:layout_marginTop="25dp"
                style="@style/GreenButton"/>

            <TextView
                style="@style/BoundedView"
                android:layout_marginTop="25dp"
                android:text="@string/rpa_request_channel"/>

            <com.ornach.nobobutton.NoboButton
                android:layout_marginTop="@dimen/chip_default_padding_edge"
                android:onClick="sharePeerSpecificNodeId"
                app:nb_text="@string/rpa_share_node_id"
                style="@style/GrayButton"/>

            <com.ornach.nobobutton.NoboButton
                app:nb_text="@string/rpa_request_hc"
                android:id="@+id/optionHostedChannel"
                android:layout_marginTop="@dimen/large_button_margin"
                android:onClick="requestHostedChannel"
                style="@style/GrayButton"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>