<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/BoundedView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/panel_qr_bg"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

    <TextView
        android:gravity="center"
        android:id="@+id/qrLabel"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        style="@style/FillingView"/>

    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="260dp"
        android:layout_height="260dp"/>

    <LinearLayout
        android:gravity="center"
        android:paddingTop="10dp"
        android:layout_width="260dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:drawableTop="@drawable/baseline_share_24"
            android:background="?android:selectableItemBackground"
            android:text="@string/dialog_share"
            android:drawablePadding="6dp"
            style="@style/FillingView"
            android:id="@+id/qrShare"
            android:layout_weight="1"
            android:textSize="14sp"
            android:padding="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:drawableTop="@drawable/outline_edit_20_24"
            android:background="?android:selectableItemBackground"
            android:text="@string/dialog_edit"
            android:drawablePadding="6dp"
            style="@style/FillingView"
            android:layout_weight="1"
            android:id="@+id/qrEdit"
            android:textSize="14sp"
            android:padding="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:background="?android:selectableItemBackground"
            android:drawableTop="@drawable/baseline_content_copy_24"
            android:text="@string/dialog_copy"
            android:drawablePadding="6dp"
            style="@style/FillingView"
            android:layout_weight="1"
            android:id="@+id/qrCopy"
            android:textSize="14sp"
            android:padding="10dp"/>

    </LinearLayout>
</LinearLayout>