<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    style="@style/StandardLinearLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none">

    <LinearLayout style="@style/StandardLinearLayout">

        <LinearLayout
            android:id="@+id/editChain"
            style="@style/StandardLinearLayout">

            <include layout="@layout/frag_input_fiat_converter"/>
            <include layout="@layout/frag_fees"/>
            <View style="@style/GrayDivider"/>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/confirmChain"
            style="@style/StandardLinearLayout">

            <RelativeLayout style="@style/StandardXYMarginLinearLayout">

                <TextView
                    style="@style/BoundedView"
                    android:text="@string/dialog_send_btc_confirm_fiat"
                    android:layout_centerVertical="true"/>

                <TextView
                    style="@style/BoundedView"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/confirmFiat"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout style="@style/StandardXYMarginLinearLayout">

                <TextView
                    style="@style/BoundedView"
                    android:text="@string/dialog_send_btc_confirm_amount"
                    android:layout_centerVertical="true"/>

                <TextView
                    style="@style/BoundedView"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/confirmAmount"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout style="@style/StandardXYMarginLinearLayout">

                <TextView
                    style="@style/BoundedView"
                    android:text="@string/dialog_send_btc_confirm_fee"
                    android:layout_centerVertical="true"/>

                <TextView
                    style="@style/BoundedView"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/confirmFee"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.ornach.nobobutton.NoboButton
                    app:nb_text="@string/dialog_send"
                    android:layout_width="wrap_content"
                    android:id="@+id/confirmSend"
                    style="@style/GreenButton"/>

                <com.ornach.nobobutton.NoboButton
                    android:layout_alignParentEnd="true"
                    app:nb_drawableResource="@drawable/outline_edit_24"
                    android:id="@+id/confirmEdit"
                    style="@style/GrayButton"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>