<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/FillingView"
    app:dragEdge="left">

    <LinearLayout
        style="@style/BoundedView"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <com.ornach.nobobutton.NoboButton
            android:layout_marginStart="15dp"
            app:nb_drawableResource="@drawable/baseline_close_24"
            android:id="@+id/removeItem"
            style="@style/RedButton"/>

    </LinearLayout>

    <FrameLayout
        android:padding="15dp"
        style="@style/FillingView">

        <androidx.cardview.widget.CardView
            card_view:cardCornerRadius="@dimen/corner_radius"
            android:id="@+id/channelCard"
            style="@style/Card">

            <LinearLayout
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:background="@drawable/border_gray"
                android:orientation="vertical"
                style="@style/FillingView">

                <!-- Branding info for HCs -->

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/hcBranding"
                    style="@style/FillingView">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"
                        style="@style/BoundedView">

                        <TextView
                            style="@style/BoundedView"
                            android:text="@string/hosted_channel"/>

                        <TextView
                            style="@style/BoundedView"
                            android:textColor="@color/colorAccent"
                            android:id="@+id/hcSupportInfo"/>

                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        card_view:cardCornerRadius="@dimen/corner_radius"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_height="36dp"
                        android:layout_width="36dp">

                        <ImageView
                            android:id="@+id/hcImage"
                            android:layout_height="36dp"
                            android:layout_width="36dp"/>

                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

                <!-- Channel info and status -->

                <RelativeLayout
                    android:paddingTop="10dp"
                    android:paddingBottom="15dp"
                    style="@style/FillingView">

                    <TextView
                        style="@style/BoundedView"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"
                        android:textColor="@color/colorAccent"
                        android:id="@+id/peerAddress"/>

                    <View
                        android:layout_width="25dp"
                        android:layout_height="8dp"
                        android:layout_marginStart="10dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/chanState"/>

                </RelativeLayout>

                <!-- Progress bars -->

                <FrameLayout
                    style="@style/FillingView"
                    android:paddingBottom="15dp"
                    android:id="@+id/progressBars">

                    <ProgressBar
                        android:progressDrawable="@drawable/progbar_stacked"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/baseBar"/>

                    <ProgressBar
                        android:progressDrawable="@drawable/progbar_overlay"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/overBar"/>

                </FrameLayout>

                <!-- Capacity, can send/receive, other info -->

                <RelativeLayout style="@style/FillingView" android:layout_marginBottom="10dp" android:id="@+id/totalCapacity">
                    <TextView style="@style/BoundedView" android:layout_centerVertical="true" android:layout_alignParentStart="true" android:text="@string/chan_capacity"/>
                    <TextView style="@style/BoundedView" android:layout_centerVertical="true" android:layout_alignParentEnd="true" android:id="@+id/totalCapacityText"/>
                </RelativeLayout>

                <RelativeLayout style="@style/FillingView" android:layout_marginBottom="10dp" android:id="@+id/canSend">
                    <TextView style="@style/BoundedView" android:layout_centerVertical="true" android:layout_alignParentStart="true" android:text="@string/chan_can_send"/>
                    <TextView style="@style/BoundedView" android:layout_centerVertical="true" android:layout_alignParentEnd="true" android:id="@+id/canSendText"/>
                </RelativeLayout>

                <RelativeLayout style="@style/FillingView" android:layout_marginBottom="10dp" android:id="@+id/canReceive">
                    <TextView style="@style/BoundedView" android:layout_centerVertical="true" android:layout_alignParentStart="true" android:text="@string/chan_can_receive"/>
                    <TextView style="@style/BoundedView" android:layout_centerVertical="true" android:layout_alignParentEnd="true" android:id="@+id/canReceiveText"/>
                </RelativeLayout>

                <View
                    style="@style/GrayDivider"
                    android:layout_marginBottom="10dp"/>

                <RelativeLayout style="@style/FillingView" android:layout_marginBottom="10dp" android:id="@+id/refundableAmount">
                    <TextView style="@style/BoundedView" android:layout_centerVertical="true" android:layout_alignParentStart="true" android:text="@string/chan_refundable"/>
                    <TextView style="@style/BoundedView" android:layout_centerVertical="true" android:layout_alignParentEnd="true" android:id="@+id/refundableAmountText"/>
                </RelativeLayout>

                <RelativeLayout style="@style/FillingView" android:layout_marginBottom="10dp" android:id="@+id/paymentsInFlight">
                    <TextView style="@style/BoundedView" android:layout_centerVertical="true" android:layout_alignParentStart="true" android:text="@string/chan_in_flight"/>
                    <TextView style="@style/BoundedView" android:layout_centerVertical="true" android:layout_alignParentEnd="true" android:id="@+id/paymentsInFlightText"/>
                </RelativeLayout>

                <!-- Extra message -->

                <TextView
                    style="@style/FillingView"
                    android:textStyle="italic"
                    android:id="@+id/extraInfoText"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone"/>

                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/overrideProposal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_green"
                    android:text="@string/ln_hc_override"
                    style="@style/ChipTextGrayMargin"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>